# programmiersprachen-aufgabe-1-V2

source/: 1_15_mile_to_kilometer.cpp  1_3_kleinster_teiler.cpp  CMakeLists.txt  tests.cpp
