add_executable(helloworld helloworld.cpp)
add_executable(1_3_kleinster_teiler 1_3_kleinster_teiler.cpp)
add_executable(tests tests.cpp)

#target_link_libraries(helloworld my_own_library)


# Kommentieren Sie die folgenden Zeilen fuer die Aufgabe `mile_to_kilometer` aus
add_executable(1_15_mile_to_kilometer 1_15_mile_to_kilometer.cpp)